<resources>
    <string name="app_name">Story App</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appwidget_text">Dicoding Story</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">NO DATA</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_account">Login account</string>
    <string name="register_successful">Register successful!</string>
    <string name="posting_successful">Posting successful!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="connection_error">Connection error</string>
    <string name="login">LOGIN</string>
    <string name="register_account">Register new account</string>
    <string name="invalid_email_address">Not a valid email address!</string>
    <string name="blank_input_text">Cannot be empty!</string>
    <string name="add_new_story">Add New Story</string>
    <string name="map">Map</string>
    <string name="logout_account">Logout account</string>
    <string name="story_list">Story List</string>
    <string name="confirmation">Confirmation</string>
    <string name="msg_logout_confirmation">Are you sure to logout?</string>
    <string name="story_detail">Story Detail</string>
    <string name="image_preview">Image Preview</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="story_description">Story description</string>
    <string name="post_story">POST STORY</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="empty_text">Empty Text</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_empty">Location is empty</string>
    <string name="retry">RETRY</string>
</resources>