<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="3dp"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:spanCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_addstory"
        app:srcCompat="@drawable/ic_baseline_create_24"
        android:overScrollMode="ifContentScrolls"
        app:elevation="6dp"
        android:contentDescription="@string/add_new_story"
        app:tint="@android:color/white"
        app:backgroundTint="@color/dicoding_500"
        android:alpha="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.8"
        android:contentDescription="@string/map"
        android:overScrollMode="ifContentScrolls"
        app:backgroundTint="@color/dicoding_500"
        app:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fab_to_addstory"
        app:srcCompat="@drawable/ic_baseline_map_24"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logout_account"
        app:tint="@android:color/white"
        app:backgroundTint="@color/dicoding_500"
        android:alpha="0.8"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_logout_24" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="9dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>