<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ui.register.RegisterActivity">

        <ImageView
            android:id="@+id/iv_applogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/dicodingstory_icon"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            tools:alpha="1"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintEnd_toEndOf="@+id/iv_applogo"
            app:layout_constraintStart_toStartOf="@+id/iv_applogo"
            app:layout_constraintTop_toBottomOf="@id/iv_applogo">

            <com.armius.dicoding.storyapp.ui.customcomponents.CustomEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            tools:alpha="1"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:layout_constraintEnd_toEndOf="@+id/iv_applogo"
            app:layout_constraintStart_toStartOf="@+id/iv_applogo"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <com.armius.dicoding.storyapp.ui.customcomponents.CustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            tools:alpha="1"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:layout_constraintEnd_toEndOf="@+id/iv_applogo"
            app:layout_constraintStart_toStartOf="@+id/iv_applogo"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <com.armius.dicoding.storyapp.ui.customcomponents.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.armius.dicoding.storyapp.ui.customcomponents.CustomButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_applogo"
            app:layout_constraintStart_toStartOf="@+id/iv_applogo"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_to_login_page"
            app:srcCompat="@drawable/ic_baseline_login_24"
            android:overScrollMode="ifContentScrolls"
            app:elevation="6dp"
            app:tint="@android:color/white"
            app:backgroundTint="@color/dicoding_500"
            android:contentDescription="@string/login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/loading_view"
            layout="@layout/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>